# Sip_in_Bloom_POS

./: .env.example  .gitignore  GETTING_STARTED.md  PROJECT_COMPLETION_SUMMARY.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  verify-setup.sh  vite.config.ts
docs/: DATABASE_SCHEMA.md  IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  SETUP_GUIDE.md  SUPABASE_MIGRATIONS.sql
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: commands.rs  db.rs  main.rs
src/components/: AlertDialog.tsx  BillingScreen.tsx  SplashScreen.tsx
src/examples/: QueryExamples.ts
src/services/: db.ts  printer.ts  sync.ts
src/types/: index.ts
