[package]
name = "slip-in-bloom-backend"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.5.6", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tokio = { version = "1", features = ["full"] }

[features]
# By default Tauri runs in strict mode where all net requests are blocked.
# Keep default empty; enable allowlist features explicitly if needed.
default = []
